--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Resume Website using HTML-CSS-JS</title>
     <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
-    <link href="public/stylesheet/styleResume.css" rel="stylesheet" type="text/css" />
-    <link href="public/stylesheet/styleResume2.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheet/styleResume.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheet/styleResume2.css" rel="stylesheet" type="text/css" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
@@ -334,6 +334,6 @@
         </div>
     </div>
 
-    <script src="public/JS_script/Resume_JS.js"></script>
+    <script src="JS_script/Resume_JS.js"></script>
 </body>
 </html>
